# itch-data-pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
analytics/: README.md
app/: README.md  streamlit_app.py
configs/: pipeline.local.example.yaml  schema_versions.yaml  validation_rules.yaml
data_fixtures/: README.md  liquidityiq_demo.json
docs/: DATA_CONTRACTS.md  DECISIONS.md  GITHUB_PUBLISH_CHECKLIST.md  OPERATIONS_RUNBOOK.md  PROFESSOR_SHOWCASE_GUIDE.md  REPRODUCIBILITY.md
evidence/: README.md
examples/: generated_sample_manifest.json  sample_manifest.json  sample_run_summary.json  sample_validation_report.json
hpc/: README.md  submit_event_pipeline.slurm  submit_job.slurm  submit_lob_snapshots.slurm  submit_lob_snapshots_until_eof.slurm  submit_week6_showcase.slurm
reports/: artifact_evidence_index.md  final_evidence_report.md  liquidityiq_case_study.md  lob_10m_comparison.md  portfolio_case_study.md
tests/: test_cli.py  test_config.py  test_data_contracts.py  test_docker_config.py  test_evidence_index.py  test_extract_itch50_sample.py  test_extract_lob_snapshots_sample.py  test_extract_order_events_sample.py  test_github_shareability.py  test_hashing.py  test_liquidityiq_analytics.py  test_lob_foundations.py  test_lob_snapshots_analytics.py  test_lob_snapshots_extraction.py  test_lob_snapshots_mapping.py  test_lob_snapshots_validation.py  test_logging_utils.py  test_manifests.py  test_meatpy_peek.py  test_meatpy_probe.py  test_message_events_analytics.py  test_message_events_validation.py  test_paths.py  (+13 more)
(+80 files in other folders)
