[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itch-data-pipeline"
version = "0.1.0"
description = "Learning-first HPC market data engineering pipeline around Nasdaq TotalView-ITCH processing."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
